Name:               migrate
Version:            0.5
Description:        Generic migration/versioning tools.
Synopsis:           Generic migration/versioning tools.
Cabal-version:      >= 1.8
Category:           Network, Web
Author:             Sebastiaan Visser
Maintainer:         code@typlab.com
License:            OtherLicense
License-File:       LICENSE
Build-Type:         Simple

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:
      base     == 4.*
    , binary   == 0.5.*
    , fclabels == 1.0.*
    , syb      == 0.3.*
  Exposed-modules:  Migrate
                    Data.Binary.Versioned

