Name:               migrate
Version:            0.5.2.3
Description:        Generic migration/versioning tools.
Synopsis:           Generic migration/versioning tools.
Cabal-version:      >= 1.8
Category:           Network, Web
Author:             Silk
Maintainer:         code@silk.co
License:            OtherLicense
Build-Type:         Simple

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:
      base     == 4.*
    , binary   >= 0.5 && < 0.8
    , fclabels >= 1.0 && < 2.1
    , json     >= 0.5 && < 0.8
    , syb      >= 0.3 && < 0.5
  Exposed-modules:  Migrate
                    Data.Binary.Versioned
                    Data.Versioned
                    Text.JSON.Versioned

